feat: display proposals on plugin page

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ NEXT_PUBLIC_CRISP_VOTING_PLUGIN_ADDRESS=0x89ECeD004714779C7b6B3bD72634D2B7A132E1
 
 NEXT_PUBLIC_SECONDS_PER_BLOCK=12
 
+# The block number where the plugin was deployed (used to speed up event queries)
+NEXT_PUBLIC_PLUGIN_DEPLOYMENT_BLOCK=0
+
 # Enclave 
 NEXT_PUBLIC_CRISP_SERVER_URL="http://127.0.0.1:8080"
 
