--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@aragon/ods": "1.0.44",
-    "@enclave-e3/sdk": "^0.0.14-test",
+    "@enclave-e3/sdk": "^0.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@shazow/whatsabi": "^0.14.1",
