--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@aragon/ods": "1.0.44",
-    "@enclave-e3/sdk": "^0.1.3",
+    "@crisp-e3/sdk": "0.2.3-test",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@shazow/whatsabi": "^0.14.1",
@@ -49,9 +49,9 @@
     "@aragon/osx-commons-configs": "^0.2.0",
     "@types/bun": "latest",
     "@types/dompurify": "^3.0.5",
+    "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.4",
-    "@types/libsodium-wrappers": "^0.7.14",
     "@types/react-blockies": "^1.4.4",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "latest",
@@ -67,6 +67,9 @@
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.4.3"
+  },
+  "overrides": {
+    "@aztec/bb.js": "0.82.2"
   },
   "prettier": {
     "printWidth": 120,
