--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aragon/ods": "1.0.44",
     "@crisp-e3/sdk": "0.5.4",
     "@hookform/resolvers": "^3.9.0",
+    "@phosphor-icons/react": "^2.1.10",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@shazow/whatsabi": "^0.14.1",
     "@tanstack/query-async-storage-persister": "^5.52.0",
